JT-2289 fix off center i icon for hero info circle on GreatSchools Rating

--- a/app/assets/stylesheets/school_profiles/_hero.scss
+++ b/app/assets/stylesheets/school_profiles/_hero.scss
@@ -121,6 +121,12 @@
     }
   }
 
+  .school-info__gs-rating {
+    .icon-hint {
+      margin-left: -1px; 
+    }
+  }
+
   .school-info__five-star-rating {
     cursor: pointer;
     @include media-breakpoint-down(xs) {
